feat: improve prediction to store an predict class and flag that was is malicous or not
