# database/models.py
@@ -108,6 +108,9 @@ class Prediction(Base):
     precision_score = Column(Numeric(10, 2), nullable=True)
     f1_score = Column(Numeric(10, 2), nullable=True)
     
+    is_malicious = Column(Boolean, nullable=False)
+    predict_class = Column(String(64), nullable=False)
+    
     suggested_desc = Column(String(512), nullable=True)
     created_at = Column(TIMESTAMP(timezone=True), nullable=False, server_default=func.now())
 
@@ -155,7 +158,7 @@ class UsageLog(Base):
     service_id = Column(BigInteger, nullable=True)
     access_key_id = Column(BigInteger, nullable=True)
     prediction_id = Column(BigInteger, nullable=True)
-    type = Column(String(20), nullable=False)
+    type = Column(Enum('PREDICT', 'ACCESS_KEY', name='usage_log_type'), nullable=False)
     created_at = Column(TIMESTAMP(timezone=True), nullable=False, server_default=func.now())
 
 class ThirdServiceConf(Base):
@@ -168,6 +171,7 @@ class ThirdServiceConf(Base):
     http_method = Column(String(8), nullable=False, default='GET')
     headers_json = Column(JSON, nullable=False, default={})
     config_json = Column(JSON, nullable=False, default={})
+    mapping_json = Column(JSON, nullable=False, default={})
     is_active = Column(Boolean, nullable=False, default=True)
     created_at = Column(TIMESTAMP(timezone=True), nullable=False, server_default=func.now())
     updated_at = Column(TIMESTAMP(timezone=True), nullable=False, server_default=func.now(), onupdate=func.now())
